docs/css/main.css
html {
    font-size: 12px;
    font-family: Roboto, Arial, sans-serif;
}
body {
    margin: 0;
    color: var(--text-col);
    background: var(--bg-col);
}
a {
    color: var(--text-col);
    text-decoration: none;
}
button {
    padding: 1rem;
    color: var(--text-col);
    background: var(--btn-col);
    border: 0;
    cursor: pointer;
}
ul {
    padding: 0;
    list-style: none;
}
h1 img {
    margin-right: 1rem;
    height: 4rem;
    vertical-align: middle;
    border-radius: 50%;
}

nav {
    margin: 0;
    padding: 1rem 2rem;
    top: 0;
    position: fixed;
    width: 100%;
    min-height: 6rem;
    background: var(--fg-col);
    display: flex;
    align-items: center;
    box-sizing: border-box;
    overflow: auto;
    z-index: 99;
}
nav h1 {
    margin: 0;
}
nav h1 img {
    height: 3.5rem;
}
#title {
    margin-right: 1rem;
}
#logo-text {
    display: none;
}
.view {
    margin-right: 1rem;
    display: inline-block;
    vertical-align: middle;
}
.view a {
    width: 1.5rem;
    height: 1.5rem;
    padding: 1rem;
    background: var(--btn-col);
    cursor: pointer;
}
.view a:hover {
    background: var(--btn-hov-col);
}
.view #grid-view {
    display: block;
}
.view #list-view {
    display: none;
}
.view.list #grid-view {
    display: none;
}
.view.list #list-view {
    display: block;
}
#searchInput {
    width: 8rem;
    padding: 1rem;
    color: var(--text-col);
    background: var(--root-col);
    border: 0;
}

.container {
    margin: 1rem 2rem;
    padding-top: 6rem;
}

.vtuber-group {
    overflow: auto;
}
.vtuber-group h1 {
    display: inline-block;
}
.channel-box {
    margin-bottom: 1vw;
    width: 88vw;
    height: 88vw;
    display: flex;
    position: relative;
    text-align: center;
    float: left;
}
.channel-box a {
    width: 100%;
    height: 100%;
    background: var(--btn-col);
}
.channel-box a:hover {
    background: var(--btn-hov-col);
}
.channel-content {
    padding: 1rem;
    width: 100%;
    top: 50%;
    left: 50%;
    position: absolute;
    transform: translate(-50%, -50%);
    box-sizing: border-box;
}
.channel-icon img {
    margin-bottom: 1rem;
    height: 32vw;
    border-radius: 50%;
}
.channel-name {
    margin-bottom: 1.5rem;
    display: -webkit-box;
    -webkit-line-clamp: 1;
    -webkit-box-orient: vertical;
    overflow: hidden;
}
.search-term {
    display: none;
}
.localized-name {
    padding: .5rem 1rem;
    background: var(--bg-col);
    border-radius: 1rem;
}
.live-indicator {
    padding: .5rem 2rem;
    color: #555;
    font-size: 1.5rem;
    border: 1px solid #555;
    border-radius: 2rem;
    display: inline-block;
}
.live-indicator.active{
    color: #f00;
    border-color:#f00;
}

.list .channel-box {
    margin: 1rem 0;
    width: auto;
    height: auto;
    text-align: left;
    float: none;
}
.list .channel-content {
    padding: 1rem;
    top: 0;
    left: 0;
    display: flex;
    align-items: center;
    position: relative;
    transform: translate(0);
}
.list .channel-icon {
    float: left;
}
.list .channel-icon img {
    margin: 0 1rem 0 0;
    height: 6rem;
}
.channel-list .list .live-indicator {
    margin-right: 1rem;
}

footer {
    padding: 1rem;
    width: 100%;
    text-align: center;
    color: var(--text-blend-col);
    background: var(--root-col);
    box-sizing: border-box;
}
footer .container {
    padding: 0;
}

#github-mark-dark {
    display: none;
}
#github-mark-light {
    display: inline-block;
}

